@@ -702,6 +702,15 @@ test_dlopen() {
 	! grep '^socket' strace.log
 }
 
+test_dlopen_cfg_print() {
+	../contrib/configure-devel --prefix=$ucx_inst
+	$MAKE clean
+	$MAKE
+
+	echo "==== Running test_dlopen_cfg_print ===="
+	./test/apps/test_dlopen_cfg_print
+}
+
 test_memtrack() {
 	../contrib/configure-devel --prefix=$ucx_inst
 	$MAKE clean
@@ -930,6 +939,7 @@ run_tests() {
 	do_distributed_task 1 4 run_ucp_client_server
 	do_distributed_task 3 4 test_profiling
 	do_distributed_task 3 4 test_dlopen
+	do_distributed_task 2 4 test_dlopen_cfg_print
 	do_distributed_task 3 4 test_memtrack
 	do_distributed_task 0 4 test_unused_env_var
 	do_distributed_task 1 3 test_malloc_hook
